# genai-sdk

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: agent_with_rag.py  agent_with_tools.py  mcp_tools.py  simple_chat.py
src/genai_sdk/: __init__.py  agent.py  config.py  errors.py  prompting.py  types.py
src/genai_sdk/memory/: __init__.py  base.py  in_memory.py  sqlite.py
src/genai_sdk/providers/: __init__.py  base.py  openai_compatible.py
src/genai_sdk/rag/: __init__.py  base.py  simple_vector.py
src/genai_sdk/tools/: __init__.py  base.py  function.py  mcp.py
tests/: test_agent.py  test_memory.py  test_openai_compatible_provider.py  test_prompting.py  test_rag.py
